--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#282C34" />
     
     <!-- Primary Meta Tags -->
-    <title>CipherHacks 2025 | San Diego's Premier High School Hackathon</title>
-    <meta name="title" content="CipherHacks 2025 | San Diego's Premier High School Hackathon" />
-    <meta name="description" content="Join CipherHacks 2025, San Diego's premier high school hackathon focused on cybersecurity and innovation. Learn, build, and compete with fellow students in an exciting weekend of coding and creativity." />
-    <meta name="keywords" content="hackathon, cybersecurity, high school hackathon, San Diego, coding competition, student hackathon, tech education, CipherHacks, programming contest, STEM education, youth coding, cyber security training, hackathon 2025, California hackathon, teen developers, computer science competition" />
+    <title>CipherHacks 2025 | San Diego Hackathon for High School Students</title>
+    <meta name="title" content="CipherHacks 2025 | San Diego Hackathon for High School Students" />
+    <meta name="description" content="Join the premier San Diego hackathon for high school students! CipherHacks 2025 is San Diego's top cybersecurity hackathon featuring coding competitions, workshops, and prizes. Register for San Diego's best student hackathon event." />
+    <meta name="keywords" content="San Diego hackathon, hackathon San Diego, San Diego hackathon 2025, high school hackathon San Diego, cybersecurity hackathon San Diego, student hackathon San Diego, coding competition San Diego, tech event San Diego, programming contest San Diego, STEM hackathon San Diego, youth hackathon San Diego, California hackathon, teen developers San Diego" />
     <meta name="author" content="CipherHacks Team" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     <meta name="googlebot" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
